--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
-  text-align: center;
+  background: black;
+  color: white;
+  width: 800px;
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  font-family: 'Press Start 2P', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App h1 {
+  background: url('assets/cookie-bg.png') repeat;
+  background-size: 30px 30px;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.App h1::after {
+  content: 'Cracker';
+  background: url('assets/cracker-bg2.png') repeat;
+  background-size: 30px 30px;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.App h2 {
+  font-size: 1rem;
+}
+
+a,
+a:visited,
+a:hover {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+figure {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cookie {
+  background-image: url('assets/cookies.png');
+  background-repeat: no-repeat;
+  width: 14px;
+  height: 14px;
+  transform: scale(5);
+}
+
+.strawberry-heart {
+  background-position: -49px -17px;
 }
